# eniac

./: .gitignore  Makefile.am  README.md  configure.ac  easm.c  log.c  log.h
src/: easm.c  lex.c  lex.h  log.c
tests/: check_lex.c  check_lex.h  suite.c
